2000-11-08  Kazu Hirata  <kazu@hxi.com>

	* bfd.c: Fix formatting.
	* binary.c: Likewise.
	* bout.c: Likewise.

2000-11-07  Kazu Hirata  <kazu@hxi.com>

	* aix386-core.c: Fix formatting.
	* aoutf1.h: Likewise.
	* aoutx.h: Likewise.
	* archures.c: Likewise.
	* armnetbsd.c: Likewise.

2000-11-07  Alan Modra  <alan@linuxcare.com.au>

	* coff-h8300.c (special): Adjust reloc address.

2000-11-06  Steve Ellcey <sje@cup.hp.com>

	* archures.c (bfd_mach_ia64_elf64, bfd_mach_ia64_elf32): Add defines
	to differentiate elf32 and elf64 on ia64.
	* bfd-in2.h: Regenerate.
	* config.bfd: Add target for "ia64*-*-hpux*".
	* configure.in: Add bfd_elf32_ia64_big_vec to selvecs switch.
	* configure: Regenerate.
	* cpu-ia64.c (bfd_ia64_elf32_arch): Add elf32 arch info structure.
	* targets.c: Add bfd_target bfd_elf32_ia64_big_vec.

	* Makefile.am: Make elf32-ia64.c and elf64-ia64.c derived objects
	from elfxx-ia64.c.  Add depenency rules for making elf32-ia64.lo.
	* Makefile.in: Regnerate.
	* elf64-ia64.c: Deleted.
	* elfxx-ia64.c: New file, paramaterized version of elf64-ia64.c.

2000-11-06  Kazu Hirata  <kazu@hxi.com>

	* aout-adobe.c: Fix formatting.
	* aout-arm.c: Likewise.
	* aout-cris.c: Likewise.
	* aout-encap.c: Likewise.
	* aout-ns32k.c: Likewise.
	* aout-target.h: Likewise.
	* aout-tic30.c: Likewise.

2000-11-05  Philip Blundell  <philb@gnu.org>

	* elf32-arm.h (elf32_arm_merge_private_bfd_data): Always permit
	BFDs containing no sections to be merged, regardless of their flags.

2000-11-04  Philip Blundell  <philb@gnu.org>

	* elf32-arm.h (elf32_arm_relocate_section): Suppress error message
	if a relocation for an undefined symbol also results in an
	overflow.

Mon Nov  6 13:35:07 2000  Christopher Faylor <cgf@cygnus.com>

	* config.bfd: Add support for Sun Chorus.

2000-11-05  David O'Brien  <obrien@FreeBSD.org>

	* configure.in: Recognize alpha-*-freebsd*.
	* configure: Regenerate.

2000-11-02  Luciano Gemme <ishitawa@yahoo.com> 
